@@ -537,6 +537,9 @@ class Sections extends Common_functions {
 	public function print_section_subnets_table($User, $sectionId, $showSupernetOnly = false) {
 		$html = array();
 
+		# create csrf token
+		$csrf_ffss = $User->Crypto->csrf_cookie ("create-if-not-exists", "find_free_section_subnets");
+
 		# set custom fields
 		$Tools = new Tools ($this->Database);
 		$custom = $Tools->fetch_custom_fields ("subnets");
@@ -556,7 +559,7 @@ class Sections extends Common_functions {
 			if ($permission>1) {
 				$html[] = "<div class='btn-group'>";
 				$html[] = '<button class="btn btn-sm btn-default btn-success editSubnet" data-action="add" data-sectionid="'.$sectionId.'" data-subnetId="" rel="tooltip" data-placement="left" title="'._('Add new subnet to section').'"><i class="fa fa-plus"></i> '._('Add subnet').'</button>';
-				$html[] = "<button class='btn btn-sm btn-default btn-success open_popup' data-script='app/admin/subnets/find_free_section_subnets.php'  data-class='700' rel='tooltip' data-container='body'  data-placement='top' title='"._('Search for free subnets in section ')."'  data-sectionId='$sectionId'><i class='fa fa-sm fa-search'></i> "._("Find subnet")."</button>";
+				$html[] = "<button class='btn btn-sm btn-default btn-success open_popup' data-script='app/admin/subnets/find_free_section_subnets.php' data-csrf_cookie='$csrf_ffss' data-class='700' rel='tooltip' data-container='body'  data-placement='top' title='"._('Search for free subnets in section ')."'  data-sectionId='$sectionId'><i class='fa fa-sm fa-search'></i> "._("Find subnet")."</button>";
 				$html[] = "</div>";
 			}
 
